Tue Jul 24 01:19:03 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Add extra DateValueRangeProcessor
	  constructor overloaded form so that in DateValueRangeProcessor(1,
	  "date:"), the const char * gets interpreted as std::string rather
	  than bool.
	* tests/queryparsertest.cc: Add regression test.

Thu Jul 19 05:32:04 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_dbcheck.h,
	  backends/inmemory/inmemory_alltermslist.cc,bin/xapian-delve.cc: Fix
	  filenames in comments which mismatch actual name of file.

Thu Jul 19 05:27:38 GMT 2012  Olly Betts <olly@survex.com>

	* queryparser/termgenerator_internal.cc: Remove "FIXME: Add API to
	  allow control of how stemming is used?", as we have now added such
	  an API.

Thu Jul 19 05:24:49 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/termgenerator.h,queryparser/termgenerator.cc,
	  queryparser/termgenerator_internal.cc,
	  queryparser/termgenerator_internal.h,tests/termgentest.cc: Add new
	  method TermGenerator::set_max_word_length() to allow this limit to
	  be adjusted by the user.

Mon Jul 16 03:34:27 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Clarify that the "reverse" parameter of
	  set_sort_by_relevance_then_value() and
	  set_sort_by_relevance_then_key() only affects the ordering of the
	  value/key part of the sort.

Fri Jul 13 04:55:26 GMT 2012  Dan Colish <dcolish@gmail.com>

	* matcher/multimatch.cc: Remove duplicate import

Thu Jul 12 05:13:57 GMT 2012  Olly Betts <olly@survex.com>

	* common/debuglog.cc: Preserve errno over debug logging calls, so they
	  can safely be added to code which expects errno not to change.

Mon Jul 02 05:27:43 GMT 2012  Dan Colish <dcolish@gmail.com>

	* backends/brass/brass_databasereplicator.cc: Use new/delete to avoid
	  variable length array gcc extension and comply with c++98

Mon Jul 02 05:02:14 GMT 2012  Dan Colish <dcolish@gmail.com>
