@@ -1,7 +1,7 @@
 /* queryparser.cc: The non-lemon-generated parts of the QueryParser
  * class.
  *
- * Copyright (C) 2005,2006,2007,2008,2010,2011 Olly Betts
+ * Copyright (C) 2005,2006,2007,2008,2010,2011,2012 Olly Betts
  * Copyright (C) 2010 Adam Sjøgren
  *
  * This program is free software; you can redistribute it and/or
@@ -57,6 +57,8 @@ SimpleStopper::get_description() const
 }
 
 ValueRangeProcessor::~ValueRangeProcessor() { }
+
+FieldProcessor::~FieldProcessor() { }
 
 QueryParser::QueryParser(const QueryParser & o) : internal(o.internal) { }
 
@@ -163,6 +165,13 @@ QueryParser::add_prefix(const string &field, const string &prefix)
 }
 
 void
+QueryParser::add_prefix(const string &field, Xapian::FieldProcessor * proc)
+{
+    Assert(internal.get());
+    internal->add_prefix(field, proc, NON_BOOLEAN);
+}
+
+void
 QueryParser::add_boolean_prefix(const string &field, const string &prefix,
 				bool exclusive)
 {
@@ -173,6 +182,19 @@ QueryParser::add_boolean_prefix(const string &field, const string &prefix,
 	throw Xapian::UnimplementedError("Can't set the empty prefix to be a boolean filter");
     filter_type type = (exclusive ? BOOLEAN_EXCLUSIVE : BOOLEAN);
     internal->add_prefix(field, prefix, type);
+}
+
+void
+QueryParser::add_boolean_prefix(const string &field, Xapian::FieldProcessor * proc,
+				bool exclusive)
+{
+    Assert(internal.get());
+    // Don't allow the empty prefix to be set as boolean as it doesn't
+    // really make sense.
+    if (field.empty())
+	throw Xapian::UnimplementedError("Can't set the empty prefix to be a boolean filter");
+    filter_type type = (exclusive ? BOOLEAN_EXCLUSIVE : BOOLEAN);
+    internal->add_prefix(field, proc, type);
 }
 
 TermIterator
